Fixed a specific issue with an incorrectly evaluated promo condition, and changed the way the routine works in general to avoid such issues more by default; issue reported by John Berry
git-svn-id: http://svn.ofbiz.org/svn/ofbiz/trunk@3817 deaff617-5be1-0310-a1b7-ec6878f92ba9